--- a/Homework/DM2023-Lab2-Homework.ipynb
+++ b/Homework/DM2023-Lab2-Homework.ipynb
@@ -5,11 +5,11 @@
    "metadata": {},
    "source": [
     "### Student Information\n",
-    "Name:\n",
+    "Name:林淞祐\n",
     "\n",
-    "Student ID:\n",
+    "Student ID:111061562\n",
     "\n",
-    "GitHub ID:\n",
+    "GitHub ID:ansonlin3578\n",
     "\n",
     "Kaggle name:\n",
     "\n",
@@ -83,7 +83,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.13"
   },
   "varInspector": {
    "cols": {
@@ -116,5 +116,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
