--- a/Homework/DM2023-Lab2-Homework.ipynb
+++ b/Homework/DM2023-Lab2-Homework.ipynb
@@ -69,7 +69,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# First PART"
+    "# First PART\n",
+    "### Here, i only paste the exercise part , if you want run it and look up the plot, you should go back to the [DM2023-Lab2-Homework.ipynb](../DM2023-Lab2-Master.ipynb)"
    ]
   },
   {
