--- a/Homework/DM2023-Lab2-Homework.ipynb
+++ b/Homework/DM2023-Lab2-Homework.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "source": [
     "# First PART\n",
-    "### Here, i only paste the exercise part , if you want run it and look up the plot, you should go back to the [DM2023-Lab2-Homework.ipynb](../DM2023-Lab2-Master.ipynb)"
+    "### Here, i only paste the exercise part , if you want run it and look up the plot, you should go back to the [DM2023-Lab2-Master.ipynb](../DM2023-Lab2-Master.ipynb)"
    ]
   },
   {
